<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.obadiahkorir.diatebese.NutritionsActivity"
    tools:showIn="@layout/app_bar_nutritions">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/newCastle_image"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="200dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_marginRight="100dp"-->
        <!--android:layout_marginLeft="100dp"-->
        <!--android:src="@drawable/chicken1"-->
        <!--/>-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/quinoa"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet1"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet2"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet3"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet4"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet5"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet6"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet7"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet8"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet9"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet10"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet11"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet12"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet13"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet14"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet16"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet17"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet18"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet19"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/quinoa"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet20"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_diet21"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>


