<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.obadiahkorir.diatebese.PreventionActivity"
    tools:showIn="@layout/app_bar_prevention">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/newCastle_image"-->
        <!--android:layout_width="200dp"-->
        <!--android:layout_height="200dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_marginRight="100dp"-->
        <!--android:layout_marginLeft="100dp"-->
        <!--android:src="@drawable/chicken1"-->
        <!--/>-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/prevent"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_prevent"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_prevent1"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diabetes_prevent2"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/headerColor"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
